Make uni-bar a horizontal scrollbar, and absolute value scrap to prevent hard-crash.

--- a/css/system-style.css
+++ b/css/system-style.css
@@ -70,32 +70,22 @@
 	width: 400px;
 	height: 7%;
 	display: flex;
-	justify-content: left;
-	align-items: center;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	overflow-x: scroll;
+	scroll-behavior: smooth;
+  	-webkit-overflow-scrolling: touch;
+	white-space: nowrap;
 	background: #0f0f0f;
-	overflow: hidden;
 	border: 3px solid #7a7a7a;
 	z-index: 1000;
 }
-.miscMenu {
-	position: absolute;
-	bottom: 1px;
-	left: 0px;
-	width: 400px;
-	height: 7%;
-	display: flex;
-	flex-direction: row;
-	justify-content: auto;
-	background: #0f0f0f;
-	border-left: 3px solid #7a7a7a;
-	border-right: 3px solid #7a7a7a;
-	border-bottom: 3px solid #7a7a7a;
-	z-index: 1000;
-}
 .uniButton {
-	width: auto;
+	display: inline-block;
+  	flex: 0 0 auto;
+	margin: 0;
+	width: 19%;
 	height: 100%;
-	flex-grow: 1;
 	color: rgba(0, 0, 0, 0.9);
 	font-size: 3vh;
 	cursor: pointer;
@@ -135,6 +125,21 @@
 	color: rgba(255, 255, 255, 0.3);
 	background-color: #222;
 	cursor: default;
+}
+.miscMenu {
+	position: absolute;
+	bottom: 1px;
+	left: 0px;
+	width: 400px;
+	height: 7%;
+	display: flex;
+	flex-direction: row;
+	justify-content: auto;
+	background: #0f0f0f;
+	border-left: 3px solid #7a7a7a;
+	border-right: 3px solid #7a7a7a;
+	border-bottom: 3px solid #7a7a7a;
+	z-index: 1000;
 }
 .miscButton {
 	width: 60px;
